--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,23 +1,120 @@
 <resources>
-  <string name="app_name">Sample</string>
+    <string name="app_name">幽谷客</string>
+    <string name="app_copyright">\@2017 版权归雷珏所有</string>
 
-  <string name="font_size">Size</string>
-  <string name="font_color">Text Color</string>
-  <string name="font_spacing">Exact Spacing</string>
-  <string name="font_none">none</string>
-  <string name="font_highlight_color">Highlight</string>
-  <string name="font_default_text">AaBbCcDd</string>
-  <string name="font_style_normal">Normal</string>
-  <string name="font_style_heading_1">Heading 1</string>
-  <string name="font_style_heading_2">Heading 2</string>
-  <string name="font_style_heading_3">Heading 3</string>
-  <string name="font_insert">Insert</string>
-  <string name="edit_hyperlink">Edit Hyperlink</string>
-  <string name="address">Address:</string>
-  <string name="text_to_display">Text to display:</string>
-  <string name="ok">OK</string>
-  <string name="edit_table">Edit Table</string>
-  <string name="heading_4">Heading 4</string>
-  <string name="heading_5">Heading 5</string>
-  <string name="heading_6">Heading 6</string>
+    <string name="login_account">用户名/手机号码/邮箱</string>
+    <string name="login_limit">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@._</string>
+
+
+    <string name="user_head_img">个人头像</string>
+    <string name="user_nickname">用户昵称</string>
+
+    <string name="post_title">标题</string>
+    <string name="post_content">标题</string>
+    <string name="post_new_toolbar">帖子</string>
+    <string name="post_new_title">标题</string>
+    <string name="post_hint_title">输入帖子标题</string>
+
+    <string name="dialog_file_new">新建文件夹</string>
+
+
+    <string name="editor_table_rows">列数</string>
+    <string name="editor_table_cols">行数</string>
+    <string name="editor_link_name">链接名称</string>
+    <string name="editor_link_url">链接地址</string>
+    <string name="editor_ok">确定</string>
+
+    <string name="login_title">登录</string>
+    <string name="login_phone_number">手机号码</string>
+    <string name="login_phone_number_null">请输入用户名/手机号码/邮箱</string>
+    <string name="login_password">密码</string>
+    <string name="login_password_null">请输入密码</string>
+    <string name="login_btn_login">登录</string>
+    <string name="login_register">快速注册</string>
+    <string name="login_forget_pwd">找回密码</string>
+    <string name="forget_pwd_title">忘记密码</string>
+    <string name="register_title">注册</string>
+    <string name="register_phone_number">手机号码</string>
+    <string name="register_phone_number_null">请输入手机号码</string>
+    <string name="register_btn_next">下一步</string>
+    <string name="register_sub_title">请输入手机号码</string>
+    <string name="register_check_code">校验码</string>
+    <string name="register_btn_re_code">秒后重发</string>
+    <string name="register_btn_re_code_done">获取验证码</string>
+    <string name="edit_code_null">请输入验证码</string>
+    <string name="register_password">密码</string>
+    <string name="register_password_null">请输入密码</string>
+    <string name="register_confirm_password">确认密码</string>
+    <string name="register_old_password">原始密码</string>
+    <string name="register_new_password">新密码</string>
+    <string name="register_alter_password">修改密码</string>
+    <string name="register_error_info_re">两次输入的密码不一致</string>
+    <string name="register_error_info">*密码和确认密码必须是字母大小写或数字，长度为6-20位</string>
+    <string name="register_btn_register">注册</string>
+    <string name="register_forget_password">找回密码</string>
+    <string name="register_edit_digits" translatable="false">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ</string>
+
+    <string name="navigation_drawer_open">Open navigation drawer</string>
+    <string name="navigation_drawer_close">Close navigation drawer</string>
+
+    <string name="action_settings">设置</string>
+    <string name="click_login">点击头像登录</string>
+    <string name="hint_name">用户名/Email/手机号</string>
+    <string name="hint_password">密码</string>
+
+    <string name="user_login">用户登录</string>
+    <string name="login">登录</string>
+    <string name="error_login_empty">用户名/Email/手机号不能为空</string>
+    <string name="error_pswd_empty">密码不能为空</string>
+    <string name="snackbar_indefinitely">无限期显示Snackbar</string>
+    <string name="snackbar_long">在Long时间段内显示Snackbar</string>
+    <string name="snackbar_short">在short时间段内显示Snackbar</string>
+    <string name="snackbar_action">设置Snackbar的action</string>
+    <string name="snackbar_color">自定义Snackbar的文字颜色</string>
+
+    <string name="sign_up">注册</string>
+
+    <string name="username_input">请输入用户名（6-20位字母开头只包含字母、数字及下划线）</string>
+    <string name="username_input_login">请输入用户名/手机号/邮箱</string>
+    <string name="username_invalid">无效用户名</string>
+    <string name="username_invalid_phone">无效手机号</string>
+    <string name="username_invalid_email">无效邮箱</string>
+    <string name="username_invalid_all">请填入正确的用户名/手机号/邮箱</string>
+
+    <string name="username_null">用户名不能为空</string>
+
+    <string name="password_input">请输入密码</string>
+    <string name="password_confirm">请确认密码</string>
+    <string name="password_invalid">无效密码</string>
+    <string name="password_null">密码不能为空</string>
+    <string name="password_different">两次输入的密码不同</string>
+
+    <string name="username_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ_</string>
+    <string name="password_digits">0123456789abcdefghijklmnopqrstuvwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ@._</string>
+
+
+
+
+
+
+
+    <string name="editor_font_size">字体大小</string>
+    <string name="editor_font_color">字体颜色</string>
+    <string name="editor_font_spacing">Exact Spacing</string>
+    <string name="editor_font_none">none</string>
+    <string name="editor_font_highlight_color">强调色</string>
+    <string name="editor_font_default_text">AaBbCcDd</string>
+    <string name="editor_font_style_normal">Normal</string>
+    <string name="editor_font_style_heading_1">Heading 1</string>
+    <string name="editor_font_style_heading_2">Heading 2</string>
+    <string name="editor_font_style_heading_3">Heading 3</string>
+    <string name="editor_font_insert">Insert</string>
+    <string name="edit_hyperlink">Edit Hyperlink</string>
+    <string name="address">Address:</string>
+    <string name="text_to_display">Text to display:</string>
+    <string name="ok">OK</string>
+    <string name="edit_table">Edit Table</string>
+    <string name="heading_4">Heading 4</string>
+    <string name="heading_5">Heading 5</string>
+    <string name="heading_6">Heading 6</string>
 </resources>
